# svg2scad

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/: bezier.hpp  error.hpp  svg_reader.hpp
include/math/: float.hpp  matrix.hpp  util.hpp  vector.hpp
src/: bezier.cpp  error.cpp  main.cpp  svg_reader.cpp
src/math/: float.cpp  util.cpp
